--- a/Essentials.tex
+++ b/Essentials.tex
@@ -65,6 +65,5 @@ if $\mathbf{A}$ symmetric: $A = \mathbf{Q} \boldsymbol{\Lambda} \mathbf{Q^\top}$
 
 
 \subsection*{Lagrangian Multipliers}
-\\
-\\
-\\
+\newline
+\newline
