--- a/Essentials.tex
+++ b/Essentials.tex
@@ -65,5 +65,4 @@ if $\mathbf{A}$ symmetric: $A = \mathbf{Q} \boldsymbol{\Lambda} \mathbf{Q^\top}$
 
 
 \subsection*{Lagrangian Multipliers}
-\newline
-\newline
+\vspace{5mm}
