--- a/PCA.tex
+++ b/PCA.tex
@@ -11,7 +11,8 @@ $\mathbf{X} \in \mathbb{R}^{D \times N}$. $N$ observations, $K$ rank.\\
 8. Reverse centering: $\tilde{\mathbf{X}} = \tilde{\overline{\mathbf{X}}} + \mathbf{M}$.\\
 For compression save $\mathbf{U}_k, \overline{\mathbf{Z}}_K, \overline{\mathbf{x}}$.\\
 $\mathbf{U}_k \in \mathbb{R}^{D \times K}, \boldsymbol{\Sigma} \in \mathbb{R}^{D \times D}, \overline{\mathbf{Z}}_K \in \mathbb{R}^{K \times N}, \overline{\mathbf{X}} \in \mathbb{R}^{D \times N}$
-
+\subsection*{Recons. Error}
+\vspace{10mm}
 \subsection*{Iterative View}
 Residual $r_i$: $x_i - \tilde{x}_i = I - uu^T  x_i$\\
 Cov of $r$:  $\frac{1}{n} \sum_{i=1}^n (I-uu^T)x_i x_i^T (I-uu^T)^T =$ \\
