--- a/SVD.tex
+++ b/SVD.tex
@@ -13,7 +13,7 @@ $(\mathbf{D}^{-1})_{i,i} = \frac{1}{\mathbf{D}_{i, i}}$ (don't forget to transpo
 5. normalize each column of $\mathbf{U}$ and $\mathbf{V}$.
 
 \subsection*{Low-Rank approximation}
-Using only $K$ largest eigenvalues and corresponding eigenvectors. $\\mathbf{A}_{K} = \sum_{k=1}^K \mathbf{\sigma}_{k} \mathbf{u}_{k} (\mathbf{v}^\top)_{k}$.
+Using only $K$ largest eigenvalues and corresponding eigenvectors. $\mathbf{A}_{K} = \sum_{k=1}^K \mathbf{\sigma}_{k} \mathbf{u}_{k} \mathbf{v}^\top_{k}$.
 
 \subsection*{Echart-Young Theorem}
 $\min_{rank(B)=K} ||A-B||_F^2 = ||A-A_k||_F^2 = \sum_{r=k+1}^{rank(A)} \sigma_r^2$
