--- a/SVD.tex
+++ b/SVD.tex
@@ -18,3 +18,4 @@ Using only $K$ largest eigenvalues and corresponding eigenvectors. $\mathbf{A}_{
 \subsection*{Echart-Young Theorem}
 $\min_{rank(B)=K} ||A-B||_F^2 = ||A-A_k||_F^2 = \sum_{r=k+1}^{rank(A)} \sigma_r^2$
 $\min_{rank(B)=K} ||A-B||_2 = ||A-A_k||_2 = \sigma_{k+1}$
+\vspace{6mm}
