--- a/Reconstruction.tex
+++ b/Reconstruction.tex
@@ -1,8 +1,8 @@
 % !TEX root = Main.tex
-\section{Matrix Approximation \& Reconstruction}
+\section{Optimization}
 
-$\min_{rank(B)=k}[\sum_{(i,j)\in I}{(a_{ij}-b_{ij})^2}], I=\{(i,j): \mathit{ob.}\}$
 \subsection*{Alternating Least Squares}
+Beyond SVD: unobserved entries! $f(U,v_i)=\sum_{(i,j)\in I} (a_{i,j} - \langle u_j, v_i \rangle)^2$\\
 \vspace{50mm}
 
 % YZF: need revising
