--- a/NMF.tex
+++ b/NMF.tex
@@ -1,14 +1,13 @@
 % !TEX root = Main.tex
 \section{Non-Negative Matrix Factorization}
 $\mathbf{X} \in \mathbb{Z}^{N \times M}_{\geq 0}$, NMF: $\mathbf{X} \approx \mathbf{U^\top V}, x_{ij}=\sum_z{u_{zi}v_{zj}}=\langle\mathbf{u}_i \mathbf{v}_j\rangle$
-Decompose object into features: topics, face parts, etc.. $\mathbf{u}$ weights on parts, $\mathbf{v}$ parts (bases). More interpretable (PCA: holistic repre.).
-
-\subsection*{EM for MLE for pLSA (NO global opt guarantee)}
+Decompose object into features: topics, face parts, etc.. $\mathbf{u}$ weights on parts, $\mathbf{v}$ parts repre. (bases) -more interpretable. (PCA: holistic repre.-basis func.)
 \textbf{Context Model:} $p(w | d) = \sum_{z=1}^K p(w | z) p(z | d)$\\
 \textbf{Conditional independence assumption ($*$):}\\
 $p(w|d) = \sum_z p(w,z|d) = \sum_z p(w|d,z)p(z|d) \stackrel{*}{=} \sum_z p(w|z)p(z|d)$\\
 \textbf{Symmetric parameterization:}\\
 $p(w, d) = \sum_z p(z)p(w | z) p(d | z)$ \\
+\subsection*{EM for MLE for pLSA (NO global opt guarantee)}
 Log-Likelihood: $L(\mathbf{U}, \mathbf{V}) = \sum_{i,j} x_{i,j}\log p(w_j|d_i) \\
 = \sum_{(i,j) \in X} \log \sum_{z=1}^K p(w_j|z)p(z|d_i)$ \\ 
 $ p(w_j|z) = v_{zj}$, $p(z|d_i) = u_{zi}$, $\sum_j^N v_{zj} = \sum_z^K u_{zi} = 1$\\
