--- a/NMF.tex
+++ b/NMF.tex
@@ -27,7 +27,7 @@ Bayesian averaging over $\mathbf{u}$: $p(\mathbf{x}|\mathbf{V},\alpha)=\int p(\m
 
 $\min_{\mathbf{U}, \mathbf{V}} J(\mathbf{U}, \mathbf{V}) = \frac{1}{2} \|\mathbf{X} - \mathbf{U}^\top\mathbf{V}\|_F^2$ (non-negativity)
 s.t. $\forall i,j,z:u_{zi},v_{zj} \geq 0 $ \\
-Comparison with pLSA: 
+Comparison with pLSA: \\
 1. sampling model: Gaussian vs multinomial
 2. objective: quadratic vs KL divergence
 3. constraints: not normalized \\
