--- a/WordEmbedding.tex
+++ b/WordEmbedding.tex
@@ -6,9 +6,9 @@ $p_\theta(w|w')$ = Pr[$w$ occurs in context of $w'$]\\
 $L(\theta; \mathbf{w}) = \sum_{t=1}^T\sum_{\Delta \in I}{\log p_\theta(w^{(t+\Delta)}|w^{(t)})}$\\
 \textbf{Latent Vector Model:} $w \rightarrow (\mathbf{x}_w, b_w) \in \mathbb{R}^{D+1} \\p_{\theta}(w|w') = \frac{\exp[\langle \mathbf{x}_w,\mathbf{x}_{w'}\rangle + b_w]}{\sum_{v\in V}{\exp[\langle \mathbf{x}_v,\mathbf{x}_{w'}\rangle + b_v ]}}$ (soft-max).\\
 \textbf{Modifications:}\\
-$\log p_{\theta}(w|w') = \langle  y_{w} , x_{w'} \rangle + b_w$,  word $y_w$, c'txt $x_{w'}$\\
-use GloVe objective\\
-negative sampling (logistic classification)
+$\log p_{\theta}(w|w') = \langle  y_{w} , x_{w'} \rangle + b_w$,  word embedding $y_w$, context embeddings $x_{w'}$\\
+Alternative to MLE (partition calculation is hard): negative sampling (modify objective into logistic classification)
+\vspace{10mm}
 
 \subsection*{GloVe (Weighted Square Loss)}
 \textbf{Co-occurence Matrix:}\\
@@ -17,7 +17,8 @@ $\mathbf{N} = (n_{ij}) \in \mathbb{R}^{|V|\times|C|} = \# of word w_i$ in contex
 $= \sum_{n_{ij} > 0} f(n_{ij})(\log n_{ij} - \log \exp[\langle \mathbf{x}_i, \mathbf{y}_j \rangle + b_i + d_j])^2$\\
 with $f(n) = \min\{1, (\frac{n}{n_{max}})^\alpha\}$, $\alpha \in (0;1]$.\\
 unnormalized distr. $\rightarrow$ 2-sided loss function\\
-It can also be written as matrix factorization problem: \vspace{10mm}
+It can also be written as matrix factorization problem: 
+\vspace{10mm}\\
 Perform SGD to find local minimum
 1. sample $(i,j) u.a.r, s.t. n_{ij}>0$\\
 2. $\mathbf{x}_i^{new} \leftarrow \mathbf{x}_i + 2\eta f(n_{ij})(\log n_{ij} - \langle \mathbf{x}_i, \mathbf{y}_j \rangle)\mathbf{y}_j$\\
