--- a/WordEmbedding.tex
+++ b/WordEmbedding.tex
@@ -19,7 +19,7 @@ with $f(n) = \min\{1, (\frac{n}{n_{max}})^\alpha\}$, $\alpha \in (0;1]$.\\
 unnormalized distr. $\rightarrow$ 2-sided loss function\\
 It can also be written as matrix factorization problem: 
 \vspace{10mm}\\
-Perform SGD to find local minimum
+Perform SGD to find local minimum\\
 1. sample $(i,j) u.a.r, s.t. n_{ij}>0$\\
 2. $\mathbf{x}_i^{new} \leftarrow \mathbf{x}_i + 2\eta f(n_{ij})(\log n_{ij} - \langle \mathbf{x}_i, \mathbf{y}_j \rangle)\mathbf{y}_j$\\
 3. $\mathbf{y}_j^{new} \leftarrow \mathbf{y}_j + 2\eta f(n_{ij})(\log n_{ij} - \langle \mathbf{x}_i, \mathbf{y}_j \rangle)\mathbf{x}_i$
